src/test/deca/extension/codegen/invalid/test_access_non_initalisee.deca
// Description:
// Test l'acces d'element invalid matrice 
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result
// Historique:
//    cree le 01/01/2023


{
    int[][] x = new int[2][15]; 
    int a = 5;
    x[1][10] = a;
    a = x[1][10];
}